# aiWritter

./: .gitignore  Cargo.toml  changeGitConfig.sh  createPost.mjs  email.txt  getHashTags.mjs  gptPrompt.mjs  req.txt  resetGitConfig.sh  save_video.py  videoImageReplace.py
.github/workflows/: imageCreationTests.yml  tests.yml  videoImageTests.yml
insta_image_gen/: .gitignore  ImageGenerator.py  Test.py  main.py
js/: Dockerfile  README.md  bun.lockb  createPost.mjs  getHashTags.mjs  gptPrompt.mjs  gptPromptStr.mjs  gpt_prompt.txt  imageMaker.mjs  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  postToInstagram.mjs  server.mjs  test.js  todo.md  wordpress.mjs
js/ts/: addHash.sh  bun.lockb  getHash.ts  package-lock.json  package.json  photogen.ts  pnpm-lock.yaml  saveCanvas.ts  test.sh  test.ts  todo.md  tsconfig.json
js/ts/tests/: makeBackgroundUT.ts
js/ts/utils/: fileExists.ts
src/: BI.rs  email.txt  get_has  get_has.rs  get_hashtags.rs  gpt_prompt.rs  gpt_prompt.txt  main  main.rs  post_to_insta.rs  righton  wordpress.rs
video_image_replacement/: aux_main.py  cli.py  generate_replacement_frame.py  get_first_frame.py  image_replace.py  main_image_replace.py  req.txt  save_video.py  tests.py  todo.md  videoImageReplace.py  video_image_replace.py  video_replace_class.py
video_image_replacement/inputs/: get_path.py  get_time.py
video_image_replacement/utils/: exception.py  generate_replacement_frame.py  save_video.py  scaler.py  video_image_replace.py
