[package]
name = "ai-writter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "2.1.4"
dotenv = "0.15.0"
colored = "*"
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
base64 = "0.21.5"
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"